--- a/model/scratch.ipynb
+++ b/model/scratch.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3663247/859605501.py:18: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+      "/tmp/ipykernel_2712746/859605501.py:18: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
       "  from imp import reload\n"
      ]
     }
@@ -41,13 +41,225 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qwer = pd.read_csv('/mnt/storage7/jody/philippines/projects/all_philippines/tbprofiler_new/variants.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_data = pd.read_csv('/mnt/storage10/jody/projects/variant_dump/variants.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>genome_pos</th>\n",
+       "      <th>gene</th>\n",
+       "      <th>change</th>\n",
+       "      <th>freq</th>\n",
+       "      <th>type</th>\n",
+       "      <th>sublin</th>\n",
+       "      <th>drtype</th>\n",
+       "      <th>drugs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ERR9787047</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>lineage6.1.1</td>\n",
+       "      <td>Sensitive</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>SRR8902561</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>La1.8.1</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2273</th>\n",
+       "      <td>ERR2815611</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>0.985075</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>La1.1</td>\n",
+       "      <td>Sensitive</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2336</th>\n",
+       "      <td>ERR3439434</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>La1.8.1</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3706</th>\n",
+       "      <td>SRR14782548</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>0.976190</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>La1.2.BCG</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7414917</th>\n",
+       "      <td>ERR2512732</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>La1.8.1</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7415030</th>\n",
+       "      <td>ERR192047</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>La1.8.1</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7415606</th>\n",
+       "      <td>ERR4192560</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>lineage6.1.1</td>\n",
+       "      <td>Sensitive</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7415792</th>\n",
+       "      <td>SRR1735567</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>La1.2.BCG</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7420193</th>\n",
+       "      <td>ERR4188235</td>\n",
+       "      <td>6446</td>\n",
+       "      <td>gyrB</td>\n",
+       "      <td>p.Ala403Ser</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>missense_variant</td>\n",
+       "      <td>La1.8.1</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10112 rows × 9 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "71"
+       "           sample_id  genome_pos  gene       change      freq  \\\n",
+       "0         ERR9787047        6446  gyrB  p.Ala403Ser  1.000000   \n",
+       "141       SRR8902561        6446  gyrB  p.Ala403Ser  1.000000   \n",
+       "2273      ERR2815611        6446  gyrB  p.Ala403Ser  0.985075   \n",
+       "2336      ERR3439434        6446  gyrB  p.Ala403Ser  1.000000   \n",
+       "3706     SRR14782548        6446  gyrB  p.Ala403Ser  0.976190   \n",
+       "...              ...         ...   ...          ...       ...   \n",
+       "7414917   ERR2512732        6446  gyrB  p.Ala403Ser  1.000000   \n",
+       "7415030    ERR192047        6446  gyrB  p.Ala403Ser  1.000000   \n",
+       "7415606   ERR4192560        6446  gyrB  p.Ala403Ser  1.000000   \n",
+       "7415792   SRR1735567        6446  gyrB  p.Ala403Ser  1.000000   \n",
+       "7420193   ERR4188235        6446  gyrB  p.Ala403Ser  1.000000   \n",
+       "\n",
+       "                     type        sublin     drtype drugs  \n",
+       "0        missense_variant  lineage6.1.1  Sensitive   NaN  \n",
+       "141      missense_variant       La1.8.1      Other   NaN  \n",
+       "2273     missense_variant         La1.1  Sensitive   NaN  \n",
+       "2336     missense_variant       La1.8.1      Other   NaN  \n",
+       "3706     missense_variant     La1.2.BCG      Other   NaN  \n",
+       "...                   ...           ...        ...   ...  \n",
+       "7414917  missense_variant       La1.8.1      Other   NaN  \n",
+       "7415030  missense_variant       La1.8.1      Other   NaN  \n",
+       "7415606  missense_variant  lineage6.1.1  Sensitive   NaN  \n",
+       "7415792  missense_variant     La1.2.BCG      Other   NaN  \n",
+       "7420193  missense_variant       La1.8.1      Other   NaN  \n",
+       "\n",
+       "[10112 rows x 9 columns]"
       ]
      },
      "execution_count": 7,
@@ -56,16 +268,36 @@
     }
    ],
    "source": [
-    "len('GCTTGCATGCCTGCAGGTCGACTCTAGAGGATCCCCCTACATTTTACACACAGGAAACAGCTATGACCATG')"
+    "full_data[full_data['change']=='p.Ala403Ser']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7420996, 9)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from primer3 import bindings\n"
+    "full_data"
    ]
   },
   {
