--- a/model2in1/scratch.ipynb
+++ b/model2in1/scratch.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_289587/1148525898.py:18: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
-      "  from imp import reload\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<module 'Thermo' from '/mnt/storage10/lwang/Projects/Amplicone_design_tool/model2in1/Thermo.py'>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -33,11 +35,13 @@
     "from plotly import graph_objects as go\n",
     "import json\n",
     "from imp import reload\n",
-    "# import primer_selection\n",
-    "# reload(primer_selection)\n",
+    "import primer_selection\n",
+    "reload(primer_selection)\n",
     "# import testing\n",
     "# reload(testing)\n",
-    "import math"
+    "import math\n",
+    "import Thermo\n",
+    "reload(Thermo)"
    ]
   },
   {
@@ -49,6 +53,49 @@
     "susana_design = pd.read_excel('/mnt/storage10/lwang/Projects/Amplicone_design_tool/model2in1/amplicon_TB_2023_V2.xlsx', header = 0)\n",
     "susana_design = susana_design.iloc[:-3]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Gibbs': -24.099999999999998, 'Entropy': -375.6, 'Enthalpy': -140.6, 'Gibbs5P': -5.74, 'Gibbs3P': -7.260000000000001}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "seq = 'AGAGTTGGTGCGGCGTAA'\n",
+    "(dg, tm) = Thermo.simplified_tm(seq, complement_sequence(seq), TmVar)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Gibbs': -24.099999999999998,\n",
+       " 'Entropy': -375.6,\n",
+       " 'Enthalpy': -140.6,\n",
+       " 'Gibbs5P': -5.74,\n",
+       " 'Gibbs3P': -7.260000000000001,\n",
+       " 'Adjusted Gibbs': -20.677279044488312,\n",
+       " 'Adjusted Entropy': -386.648783435336}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -538,6 +585,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TmVar = {\n",
+    "    'DivalentSaltConc': 2,\n",
+    "    'MonovalentSaltConc': 10,\n",
+    "    'dNTPConc': 0.2,\n",
+    "    'OligoConc': 0.5\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TmVar:\n",
+    "\tDivalentSaltConc = 2\n",
+    "\tMonovalentSaltConc = 10\n",
+    "\tdNTPConc = 0.2\n",
+    "\tOligoConc = 0.5\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'type' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/mnt/storage10/lwang/Projects/Amplicone_design_tool/model2in1/scratch.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bs10/mnt/storage10/lwang/Projects/Amplicone_design_tool/model2in1/scratch.ipynb#Y155sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m TmVar[\u001b[39m'\u001b[39;49m\u001b[39m111\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m=\u001b[39m \u001b[39m111\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'type' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "TmVar['111'] = 111"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -591,47 +687,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max_gc 68.42105263157895\n",
-      "min_gc 45.0\n",
-      "max_tm 105.49456873864457\n",
-      "min_tm 92.70290207197792\n",
-      "max_tm_simple 76\n",
-      "min_tm_simple 54\n"
+      "max_gc 0\n",
+      "min_gc 100\n",
+      "max_tm 63.024451980920674\n",
+      "min_tm 63.024451980920674\n",
+      "max_dg -24.099999999999998\n",
+      "min_dg -24.099999999999998\n",
+      "max_tm_simple 0\n",
+      "min_tm_simple 100\n"
      ]
     }
    ],
    "source": [
     "max_gc = 0\n",
     "min_gc = 100\n",
+    "max_dg = -100\n",
+    "min_dg = 100\n",
     "max_tm = 0\n",
     "min_tm = 100\n",
     "max_tm_simple = 0\n",
     "min_tm_simple = 100\n",
     "for x in susana_design['forward'].tolist() + susana_design['reverse'].tolist(): \n",
-    "    if calculate_gc_content(x) > max_gc:\n",
-    "        max_gc = calculate_gc_content(x)\n",
-    "    elif calculate_gc_content(x) < min_gc:\n",
-    "        min_gc = calculate_gc_content(x)\n",
-    "    if calculate_tm_nearest_neighbor(x, 50) > max_tm:\n",
-    "        max_tm = calculate_tm_nearest_neighbor(x, 50)\n",
-    "    elif calculate_tm_nearest_neighbor(x, 50) < min_tm:\n",
-    "        min_tm = calculate_tm_nearest_neighbor(x, 50)\n",
-    "    if simplified_tm(x) > max_tm_simple:\n",
-    "        max_tm_simple = simplified_tm(x)\n",
-    "    elif simplified_tm(x) < min_tm_simple:\n",
-    "        min_tm_simple = simplified_tm(x)\n",
+    "    (dg, tm) = Thermo.simplified_tm(seq, complement_sequence(seq))\n",
+    "    if tm > max_tm:\n",
+    "        max_tm = tm\n",
+    "    elif tm < min_tm:\n",
+    "        min_tm = tm\n",
+    "    if dg['Gibbs'] > max_dg:\n",
+    "        max_dg = dg['Gibbs']\n",
+    "    elif dg['Gibbs'] < min_dg:\n",
+    "        min_dg = dg['Gibbs']\n",
+    "    # if calculate_tm_nearest_neighbor(x, 50) > max_tm:\n",
+    "    #     max_tm = calculate_tm_nearest_neighbor(x, 50)\n",
+    "    # elif calculate_tm_nearest_neighbor(x, 50) < min_tm:\n",
+    "    #     min_tm = calculate_tm_nearest_neighbor(x, 50)\n",
+    "    # if simplified_tm(x) > max_tm_simple:\n",
+    "    #     max_tm_simple = simplified_tm(x)\n",
+    "    # elif simplified_tm(x) < min_tm_simple:\n",
+    "    #     min_tm_simple = simplified_tm(x)\n",
     "        \n",
     "print('max_gc', max_gc)\n",
     "print('min_gc', min_gc)\n",
     "print('max_tm', max_tm)\n",
     "print('min_tm', min_tm)\n",
+    "print('max_dg', max_dg)\n",
+    "print('min_dg', min_dg)\n",
     "print('max_tm_simple', max_tm_simple)\n",
     "print('min_tm_simple', min_tm_simple)"
    ]
