--- a/amplicon4tb/scratch.ipynb
+++ b/amplicon4tb/scratch.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1628674/2147551372.py:18: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+      "/tmp/ipykernel_3796973/2147551372.py:18: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
       "  from imp import reload\n"
      ]
     },
@@ -19,7 +19,7 @@
        "<module 'Thermo' from '/mnt/storage10/lwang/Projects/Amplicon_design_tool/amplicon4tb/Thermo.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,6 +54,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv('/mnt/storage10/lwang/Projects/Amplicon_design_tool/test/Amplicon_design_output/Primer_design-accepted_primers-42-400.csv').head().to_excel('test.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -76,38 +85,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1673373\n",
-      "1673432\n"
-     ]
-    }
-   ],
    "source": [
     "df = pd.read_csv('/mnt/storage10/lwang/Projects/Amplicon_design_tool/db/variants.csv')\n",
-    "df = df[~df['drugs'].isna()]\n",
-    "df = df[~df['type'].isin(['synonymous_variant','non_coding_transcript_exon_variant'])]\n",
-    "df = df[df['gene']=='fabG1']\n",
+    "# df = df[~df['drugs'].isna()]\n",
+    "# df = df[~df['type'].isin(['synonymous_variant','non_coding_transcript_exon_variant'])]\n",
+    "# df = df[df['gene']=='fabG1']\n",
     "\n",
-    "print(df['genome_pos'].min())\n",
-    "print(df['genome_pos'].max())"
+    "# print(df['genome_pos'].min())\n",
+    "# print(df['genome_pos'].max())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gene\n",
+       "PPE35      NaN\n",
+       "Rv1258c    NaN\n",
+       "Rv1979c    NaN\n",
+       "Rv2752c    NaN\n",
+       "Rv3083     NaN\n",
+       "Rv3236c    NaN\n",
+       "aftB       NaN\n",
+       "ahpC       NaN\n",
+       "ald        NaN\n",
+       "alr        NaN\n",
+       "atpE       NaN\n",
+       "ccsA       NaN\n",
+       "clpC1      NaN\n",
+       "ddn        NaN\n",
+       "eis        NaN\n",
+       "embA       NaN\n",
+       "embB       NaN\n",
+       "embC       NaN\n",
+       "embR       NaN\n",
+       "ethA       NaN\n",
+       "ethR       NaN\n",
+       "fabG1      1.0\n",
+       "fbiA       NaN\n",
+       "fbiB       NaN\n",
+       "fbiC       NaN\n",
+       "fbiD       NaN\n",
+       "fgd1       NaN\n",
+       "folC       NaN\n",
+       "fprA       NaN\n",
+       "gid        NaN\n",
+       "gyrA       NaN\n",
+       "gyrB       NaN\n",
+       "inhA       NaN\n",
+       "kasA       NaN\n",
+       "katG       NaN\n",
+       "mmpL5      NaN\n",
+       "mmpR5      NaN\n",
+       "mmpS5      NaN\n",
+       "mshA       NaN\n",
+       "ndh        NaN\n",
+       "panD       NaN\n",
+       "pepQ       NaN\n",
+       "pncA       NaN\n",
+       "ribD       NaN\n",
+       "rplC       NaN\n",
+       "rpoA       NaN\n",
+       "rpoB       NaN\n",
+       "rpoC       NaN\n",
+       "rpsA       NaN\n",
+       "rpsL       NaN\n",
+       "rrl        NaN\n",
+       "rrs        NaN\n",
+       "thyA       NaN\n",
+       "thyX       NaN\n",
+       "tlyA       NaN\n",
+       "ubiA       NaN\n",
+       "whiB6      NaN\n",
+       "whiB7      NaN\n",
+       "Name: count, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['gene'].value_counts()/df['gene'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +189,7 @@
        "       'p.Arg25Pro'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,6 +198,143 @@
     "df = pd.read_csv('/mnt/storage10/lwang/Projects/Amplicon_design_tool/db/variants.csv')\n",
     "df1 = df[df['gene']=='fabG1']\n",
     "df1['change'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fabG1    3.0/10 (30%)\n",
+      "PPE35    1.0/10 (10%)\n",
+      "fprA     1.0/10 (10%)\n",
+      "gid       0.0/10 (0%)\n",
+      "Name: count, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Example Series\n",
+    "series1 = pd.Series({'fabG1': 3, 'PPE35': 1, 'fprA': 1}, name='count')\n",
+    "series2 = pd.Series({'fabG1': 10, 'PPE35': 10, 'fprA': 10, 'gid': 10}, name='count')\n",
+    "\n",
+    "series1_aligned = series1.reindex(series2.index).fillna(0)\n",
+    "\n",
+    "# Calculate the ratio and format as string\n",
+    "result = series1_aligned / series2\n",
+    "formatted_result = result.apply(lambda x: f\"{x:.0%}\")\n",
+    "\n",
+    "# Combine the two series\n",
+    "combined_series = series1_aligned.astype(str) + \"/\" + series2.astype(str) + \" (\" + formatted_result + \")\"\n",
+    "\n",
+    "print(combined_series)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gene\n",
+       "gyrA       670971\n",
+       "rrs        522322\n",
+       "rpoC       508252\n",
+       "rrl        503108\n",
+       "embA       289453\n",
+       "mmpL5      285863\n",
+       "rpoB       278048\n",
+       "clpC1      246191\n",
+       "embB       235966\n",
+       "rpsL       189191\n",
+       "PPE35      188896\n",
+       "fprA       186174\n",
+       "gid        172437\n",
+       "Rv1979c    170503\n",
+       "whiB6      169146\n",
+       "katG       165235\n",
+       "ald        164828\n",
+       "embC       161971\n",
+       "rpsA       161781\n",
+       "tlyA       149695\n",
+       "fgd1       135426\n",
+       "rpoA       129223\n",
+       "aftB       127931\n",
+       "mshA       126670\n",
+       "fbiC       117931\n",
+       "kasA       106268\n",
+       "gyrB        77837\n",
+       "Rv2752c     75833\n",
+       "pncA        74039\n",
+       "ccsA        73707\n",
+       "inhA        66439\n",
+       "Rv3236c     63067\n",
+       "thyA        61490\n",
+       "Rv3083      56273\n",
+       "ndh         53898\n",
+       "Rv1258c     50703\n",
+       "ethA        50536\n",
+       "ahpC        47889\n",
+       "rplC        43808\n",
+       "mmpS5       43471\n",
+       "folC        39463\n",
+       "thyX        37946\n",
+       "ubiA        36804\n",
+       "fbiB        35925\n",
+       "fabG1       33327\n",
+       "fbiD        32937\n",
+       "alr         30611\n",
+       "eis         27123\n",
+       "pepQ        25431\n",
+       "embR        21930\n",
+       "atpE        19244\n",
+       "whiB7       13313\n",
+       "panD        13007\n",
+       "ethR        11853\n",
+       "fbiA        10812\n",
+       "ribD        10616\n",
+       "ddn         10223\n",
+       "mmpR5        7961\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['gene'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gene\n",
+       "fabG1    33327\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['gene'].value_counts()"
    ]
   },
   {
@@ -903,6 +1112,25 @@
     "seq = 'AGAGTTGGTGCGGCGTAA'\n",
     "(dg, tm) = Thermo.simplified_tm(seq, complement_sequence(seq), TmVar)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/mnt/storage10/lwang/Projects/Amplicon_design_tool/amplicon4tb/scratch.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bs10/mnt/storage10/lwang/Projects/Amplicon_design_tool/amplicon4tb/scratch.ipynb#Y165sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m pd\u001b[39m.\u001b[39mread(\u001b[39m'\u001b[39m\u001b[39m/mnt/storage10/lwang/Projects/Amplicon_design_tool/test/Amplicon_design_output/Primer_design-accepted_primers-42-400.csv\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
